<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title_1"
        android:id="@+id/textView11"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title_2"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_button"
        android:id="@+id/start"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_start"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:gravity="center" />
</LinearLayout>