<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:text="@string/setting_label"
            android:textSize="20dp"
            android:textColor="@android:color/black" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/b_home"
            android:background="@drawable/btn_home"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_label_chart_type"
        android:id="@+id/textView2"
        android:textSize="17dp"
        android:textColor="@android:color/black"
        android:padding="5dp"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:padding="5dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_rb_line"
                android:id="@+id/rb_line"
                android:checked="true"
                android:button="@drawable/rb_chart_type"
                android:paddingLeft="5dp" />


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_rb_area"
                android:id="@+id/rb_area"
                android:checked="false"
                android:layout_marginLeft="20dp"
                android:button="@drawable/rb_chart_type"
                android:paddingLeft="5dp" />

        </RadioGroup>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/imageView"
            android:background="@color/colorSectionLine"
            android:layout_marginTop="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vTempType"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:padding="5dp" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_rb_cels"
                android:id="@+id/rb_celsius"
                android:checked="true"
                android:button="@drawable/rb_chart_type"
                android:paddingLeft="5dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_rb_faren"
                android:id="@+id/rb_farengate"
                android:checked="false"
                android:layout_marginLeft="20dp"
                android:button="@drawable/rb_chart_type"
                android:paddingLeft="5dp" />
        </RadioGroup>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/imageView2"
            android:background="@color/colorSectionLine"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_label_cities"
        android:id="@+id/textView3"
        android:textSize="17dp"
        android:textColor="@android:color/black"
        android:padding="5dp"
        android:layout_marginTop="10dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lv_cities" />

</LinearLayout>